--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.8.6",
-    "puppeteer": "^2.0.0"
+    "mongoose": "^5.8.6"
   }
 }
