--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MCDCdata",
+  "name": "mcdc-data",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -26,6 +26,7 @@
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongodb": "^3.4.1",
     "mongoose": "^5.8.6"
   }
 }
