--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.4.1",
-    "mongoose": "^5.8.6"
+    "mongoose": "^5.8.6",
+    "superagent-retry-delay": "^2.4.2"
   }
 }
